styles/styles.css
body{
    box-sizing: border-box;
    padding: 0;
    margin: 0;

}
nav{
    display: flex;
    justify-content: right;
    align-items: center;
    font-family: Arial, sans-serif;
    font-size: small;
}
nav a{
    text-decoration: none;
    color: #5F6368
}

nav a:hover{
    text-decoration: underline;
}
.nav-right{
    padding-right: 1em;
}

.nav-left{
    padding-right: 1em;
}
.left{
    flex: 1;
    padding: 1em;
    align-items: center;
    padding: 15px 0 0 30px; 
}

.right{
    flex:1;
    display: flex;
    justify-content: flex-end;
    padding: 15px 30px 0 0; 
    align-items: center;
}

.personal{
    border-radius: 50%;
}

.logo{
    display: flex;
    justify-content: center;
    padding: 9.5em 0 0 0 ;
}
.input{
    display: flex;
    flex: 1;
    padding-top: 1.5em;

}

input{
    padding: 1.25em 15.5em;
    border-radius: 25px;
    border-style: solid;
    border-color: #dfe1e5;
}

.search-wrapper{
    position: relative;
    margin-left: 42em;
    margin-top: 1.5em;
}

.search-img {
    position: absolute;
    top: 12px;
    left: 12px;
}

.search-voice{
    position: absolute;
    top:9px;
    left: 550px;
}

.buttons{
   text-align: center; 
   margin-top: 1.5em;
}

div button{
    display: inline-block;
    padding: 10px 16px;
    background-color: #f2f2f2;
    border-style: none;
}
.gsearch{
   padding-right: 40px;
}

